<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_creat_contact">Create Contact</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="form_create_contact_field_email">Email</string>
    <string name="create_contact_field_firstname">Firstname</string>
    <string name="create_contact_field_lastname">Lastname</string>
    <string name="create_contact_field_email">Email</string>
    <string name="create_contact_field_phone">Phone</string>
    <string name="create_contact_button_save">Save</string>
    <string name="create_form_msg_fields_error">You have to complete all fields</string>
    <string name="create_form_save_contact_success">Contact Created</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_update_success">Contact updated</string>
    <string name="profile_update_error">No empty field allowed</string>
    <string name="profile_delete_success">Contact deleted</string>
    <string name="text_empty_list">You have no contacts</string>
    <string name="menu_item_red">Red</string>
    <string name="menu_item_green">Green</string>
    <string name="menu_item_blue">Blue</string>
    <string name="title_activity_send_sms">SendSmsActivity</string>
    <string name="sms_input_hint">Type you message</string>
    <string name="send_sms_success">SMS sent</string>
    <string name="send_sms_error">Empty message</string>
    <string name="empty_sms_conversation">You have no message</string>
</resources>
