<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gpetrov.ft_hangouts.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:id="@+id/profile_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/profile_actions_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message_white_24dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            >
        </ImageButton>

        <ImageButton
            android:id="@+id/profile_actions_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_white_24dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            >
        </ImageButton>

        <ImageButton
            android:id="@+id/profile_actions_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mode_edit_white_24dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            >
        </ImageButton>


        <ImageButton
            android:id="@+id/profile_actions_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_white_24dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            >

        </ImageButton>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/profile_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/profile_actions"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_form_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_contact_field_firstname"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_form_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_contact_field_lastname"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_form_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_contact_field_email"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/profile_form_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_contact_field_phone"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/profile_form_button_save"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_contact_button_save"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
